--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
         "react-hook-form": "^7.46.1",
         "react-use-wizard": "^2.2.4",
         "sharp": "^0.33.0",
+        "supports-color": "^9.4.0",
         "tailwind-merge": "^1.14.0",
         "tailwindcss": "3.3.5",
         "tailwindcss-animate": "^1.0.7",
